--- a/peripherals.html
+++ b/peripherals.html
@@ -36,21 +36,21 @@
                       </a>
                       <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="desktop.html">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
-                            <path d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z"/>
-                          </svg> Desktop</a></li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pc-display-horizontal" viewBox="0 0 16 16">
+                                <path d="M1.5 0A1.5 1.5 0 0 0 0 1.5v7A1.5 1.5 0 0 0 1.5 10H6v1H1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1h-5v-1h4.5A1.5 1.5 0 0 0 16 8.5v-7A1.5 1.5 0 0 0 14.5 0h-13Zm0 1h13a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-7a.5.5 0 0 1 .5-.5ZM12 12.5a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0Zm2 0a.5.5 0 1 1 1 0 .5.5 0 0 1-1 0ZM1.5 12h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1 0-1ZM1 14.25a.25.25 0 0 1 .25-.25h5.5a.25.25 0 1 1 0 .5h-5.5a.25.25 0 0 1-.25-.25Z"/>
+                              </svg> Desktop</a></li>
+                              
                         <li><a class="dropdown-item" href="monitors.html">
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-display" viewBox="0 0 16 16">
-                            <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2V4zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z"/>
-                          </svg> Monitors</a></li>
-                          <li><a class="dropdown-item" href="graphicscrads.html">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gpu-card" viewBox="0 0 16 16"> <path d="M4 8a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm7.5-1.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"/> <path d="M0 1.5A.5.5 0 0 1 .5 1h1a.5.5 0 0 1 .5.5V4h13.5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5H2v2.5a.5.5 0 0 1-1 0V2H.5a.5.5 0 0 1-.5-.5Zm5.5 4a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5ZM9 8a2.5 2.5 0 1 0 5 0 2.5 2.5 0 0 0-5 0Z"/> <path d="M3 12.5h3.5v1a.5.5 0 0 1-.5.5H3.5a.5.5 0 0 1-.5-.5v-1Zm4 1v-1h4v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5Z"/> 
-                            </svg> Graphics Cards</a></li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-display" viewBox="0 0 16 16">
+                                <path d="M0 4s0-2 2-2h12s2 0 2 2v6s0 2-2 2h-4c0 .667.083 1.167.25 1.5H11a.5.5 0 0 1 0 1H5a.5.5 0 0 1 0-1h.75c.167-.333.25-.833.25-1.5H2s-2 0-2-2V4zm1.398-.855a.758.758 0 0 0-.254.302A1.46 1.46 0 0 0 1 4.01V10c0 .325.078.502.145.602.07.105.17.188.302.254a1.464 1.464 0 0 0 .538.143L2.01 11H14c.325 0 .502-.078.602-.145a.758.758 0 0 0 .254-.302 1.464 1.464 0 0 0 .143-.538L15 9.99V4c0-.325-.078-.502-.145-.602a.757.757 0 0 0-.302-.254A1.46 1.46 0 0 0 13.99 3H2c-.325 0-.502.078-.602.145z"/>
+                              </svg> Monitors</a></li>
+                              <li><a class="dropdown-item" href="graphicscrads.html">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-gpu-card" viewBox="0 0 16 16"> <path d="M4 8a1.5 1.5 0 1 1 3 0 1.5 1.5 0 0 1-3 0Zm7.5-1.5a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3Z"/> <path d="M0 1.5A.5.5 0 0 1 .5 1h1a.5.5 0 0 1 .5.5V4h13.5a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-.5.5H2v2.5a.5.5 0 0 1-1 0V2H.5a.5.5 0 0 1-.5-.5Zm5.5 4a2.5 2.5 0 1 0 0 5 2.5 2.5 0 0 0 0-5ZM9 8a2.5 2.5 0 1 0 5 0 2.5 2.5 0 0 0-5 0Z"/> <path d="M3 12.5h3.5v1a.5.5 0 0 1-.5.5H3.5a.5.5 0 0 1-.5-.5v-1Zm4 1v-1h4v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5Z"/> 
+                                </svg> Graphics Cards</a></li>
                         <li><hr class="dropdown-divider"></li>
                         <li><a class="dropdown-item" href="motherboards.html"> 
-                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-motherboard" viewBox="0 0 16 16"> <path d="M11.5 2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5Zm2 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5Zm-10 8a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6Zm0 2a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6ZM5 3a1 1 0 0 0-1 1h-.5a.5.5 0 0 0 0 1H4v1h-.5a.5.5 0 0 0 0 1H4a1 1 0 0 0 1 1v.5a.5.5 0 0 0 1 0V8h1v.5a.5.5 0 0 0 1 0V8a1 1 0 0 0 1-1h.5a.5.5 0 0 0 0-1H9V5h.5a.5.5 0 0 0 0-1H9a1 1 0 0 0-1-1v-.5a.5.5 0 0 0-1 0V3H6v-.5a.5.5 0 0 0-1 0V3Zm0 1h3v3H5V4Zm6.5 7a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2Z"/> <path d="M1 2a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-2H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 9H1V8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6H1V5H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 2H1Zm1 11a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v11Z"/> 
-                          </svg> Motherboards</a></li>
-                        <li><a class="dropdown-item" href="peripherals.html">Peripherals</a></li>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-motherboard" viewBox="0 0 16 16"> <path d="M11.5 2a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5Zm2 0a.5.5 0 0 1 .5.5v7a.5.5 0 0 1-1 0v-7a.5.5 0 0 1 .5-.5Zm-10 8a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6Zm0 2a.5.5 0 0 0 0 1h6a.5.5 0 0 0 0-1h-6ZM5 3a1 1 0 0 0-1 1h-.5a.5.5 0 0 0 0 1H4v1h-.5a.5.5 0 0 0 0 1H4a1 1 0 0 0 1 1v.5a.5.5 0 0 0 1 0V8h1v.5a.5.5 0 0 0 1 0V8a1 1 0 0 0 1-1h.5a.5.5 0 0 0 0-1H9V5h.5a.5.5 0 0 0 0-1H9a1 1 0 0 0-1-1v-.5a.5.5 0 0 0-1 0V3H6v-.5a.5.5 0 0 0-1 0V3Zm0 1h3v3H5V4Zm6.5 7a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h2a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-2Z"/> <path d="M1 2a2 2 0 0 1 2-2h11a2 2 0 0 1 2 2v11a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-2H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 9H1V8H.5a.5.5 0 0 1-.5-.5v-1A.5.5 0 0 1 .5 6H1V5H.5a.5.5 0 0 1-.5-.5v-2A.5.5 0 0 1 .5 2H1Zm1 11a1 1 0 0 0 1 1h11a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H3a1 1 0 0 0-1 1v11Z"/> 
+                            </svg> Motherboards</a></li>
                         <li><a class="dropdown-item" href="#">Components</a></li>
 
                       </ul>
@@ -99,82 +99,12 @@
             </ul>
           </div>
           <div id="banner">
-            <div id="text"> Gaming Laptop</div>
+            <div id="text"> Peripherals</div>
             <div class="container text-center">
               <div class="row row-cols-2 row-cols-lg-5 g-2 g-lg-3">
                 <div id="picture"  class="col1">
                   <div class="p-3 border bg-light">
-                    <div><a href="login.html"><img src="images/msigf63.jpg"style="width: 150px;"/></a> </div><p1>GF63 Thin 10SCXR (GTX1650 Max Q, GDDR6 4GB) $769.00</p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">  
-                    <div><a href="#"><img src="images/msigf63.jpg"style="width: 150px;"/></a></div><p1>GF63 Thin 10SCXR (GTX1650 Max Q, GDDR6 4GB) $899.00</p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msigf63.jpg"style="width: 150px;"/></a></div><p1>MSI GF75 Thin-10SCXR-478KH $949.00</p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a hreff="#"><img src="images/msigf63.jpg"style="width: 150px;"/></a></div><p1>MSI GF65 Thin-10SDR-628KH $1,199.00</p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msigf63.jpg"style="width: 150px;"/></a></div><p1>MSI GF65 Thin-10SER-627KH $1,299.00</p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msibravo5.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msibravo5.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msibravo5.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msibravo5.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/msibravo5.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/MSIkatana.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/MSIkatana.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/MSIkatana.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/MSIkatana.jpg"style="width: 150px;"/></a></div><p1></p1>
-                  </div>
-                </div>
-                <div class="col1">
-                  <div class="p-3 border bg-light">
-                    <div><a href="#"><img src="images/MSIkatana.jpg"style="width: 150px;"/></a></div><p1></p1>
+                    <div><a href="login.html"><img src=""style="width: 140px;"/></a> </div><p1></p1>
                   </div>
                 </div>
               </div>
